--- a/config/default_pfld.yml
+++ b/config/default_pfld.yml
@@ -75,6 +75,10 @@ train:
         load_weights_on_restart: false
     - name: TerminateOnNaN
       kwarg: null
+    - name: StepLR
+      kwarg:
+        steps: [ 10  ,  20   ]
+        rates: [0.001, 0.0001]
 prune:
   is_prune: false
   init_sparsity: 0.5
