--- a/config/default_facerec_softmax_k210.yml
+++ b/config/default_facerec_softmax_k210.yml
@@ -40,7 +40,7 @@ train:
   rand_seed: 10101
   epochs: 30
   log_dir: log
-  sub_log_dir: null
+  sub_log_dir: default_facerec_softmax_k210_exp
   debug: false
   verbose: 1
   vali_step_factor: 0.3
@@ -54,24 +54,25 @@ train:
   Lookahead_kwarg:
     k: 5
     alpha: 0.5
-  earlystop: false
-  earlystop_kwarg:
-    monitor: val_loss
-    min_delta: 0
-    patience: 4
-    verbose: 0
-    mode: auto
-    baseline: null
-    restore_best_weights: false
-  modelcheckpoint: true
-  modelcheckpoint_kwarg:
-    monitor: val_loss
-    verbose: 0
-    save_best_only: true
-    save_weights_only: false
-    mode: auto
-    save_freq: epoch
-    load_weights_on_restart: false
+  callbacks:
+    - name: EarlyStopping
+      kwarg:
+        monitor: val_loss
+        min_delta: 0
+        patience: 4
+        verbose: 0
+        mode: auto
+        baseline: null
+        restore_best_weights: false
+    - name: ModelCheckpoint
+      kwarg:
+        monitor: val_loss
+        verbose: 0
+        save_best_only: true
+        save_weights_only: false
+        mode: auto
+        save_freq: epoch
+        load_weights_on_restart: false
 prune:
   is_prune: false
   init_sparsity: 0.5
