yolo : 1. add gpu infer with ncc infer

--- a/config/default_yolov2.yml
+++ b/config/default_yolov2.yml
@@ -102,7 +102,7 @@ inference:
   infer_fn: yolo_infer
   infer_fn_kwarg:
     obj_thresh: 0.7
-    iou_thresh: 0.3
+    nms_thresh: 0.3
 evaluate:
   eval_fn: yolo_eval
   eval_fn_kwarg:
