--- a/config/default_yolov3_mbv1.yml
+++ b/config/default_yolov3_mbv1.yml
@@ -16,7 +16,8 @@ model:
         - 26
       - - 52
         - 52
-    validation_split: 0.3
+    resize_method: gluon
+    augment_method: iaa
   network: yolo_mbv1
   network_kwarg:
     input_shape:
@@ -92,6 +93,11 @@ train:
     #   kwarg:
     #     interval: 50
     #     scale_range: [-3, 3]
+    # - name: CosineLR
+    #   kwarg:
+    #      init_lr: 0.0005
+    #      decay_steps: 30
+    #      lowest_lr: 0.0001
     - name: StepLR
       kwarg:
         steps: [20, 100, 150]
@@ -107,12 +113,14 @@ inference:
   infer_fn_kwarg:
     obj_thresh: 0.7
     nms_thresh: 0.3
+    iou_method: iou
 evaluate:
   eval_fn: yolo_eval
   eval_fn_kwarg:
     det_obj_thresh: 0.1
     det_iou_thresh: 0.3
     mAp_iou_thresh: 0.3
+    iou_method: iou
     class_name:
       - aeroplane
       - bicycle
@@ -135,3 +143,4 @@ evaluate:
       - train
       - tvmonitor
     save_result: true
+    save_result_dir: /home/zqh/Documents/mAP/input
