--- a/config/default_yolov3_mbv1.yml
+++ b/config/default_yolov3_mbv1.yml
@@ -36,6 +36,9 @@ model:
     wh_weight: 3
     xy_weight: 2
     cls_weight: 1
+    use_focalloss: true
+    focal_gamma: 2.0
+    focal_alpha: 0.25
     verbose: 0
 train:
   graph_optimizer: true
