--- a/config/default_dcasetask5_fixmatch_randaug.yml
+++ b/config/default_dcasetask5_fixmatch_randaug.yml
@@ -1,13 +1,20 @@
 mode: train
 model:
-  name: supervisedaudio
-  helper: DCASETask5Helper
+  name: fixmatchaudio
+  helper: DCASETask5FixMatchSSLHelper
   helper_kwarg:
     data_ann: data/dcasetask5_ann_list.npy
     in_hw:
       - 40
       - 501
     nclasses: 9
+    unlabel_dataset_ratio: 3 # Unlabeled batch size ratio.
+    augment_kwargs:
+      name: randaugment
+      kwarg: 
+        num_layers: 3
+        prob_to_apply: 0.5
+        num_levels: 10
   network: dcasetask5basemodel
   network_kwarg:
     input_shape:
@@ -28,15 +35,20 @@ train:
     scoped_allocator_optimization: true
     layout_optimizer: true
   augmenter: true
-  batch_size: 48
-  pre_ckpt: log/default_dcasetask5_exp/auto_train_19.h5
+  batch_size: 16
+  pre_ckpt: null
   rand_seed: 10101
   epochs: 50
   steps_per_run: 30
   log_dir: log
-  sub_log_dir: default_dcasetask5_exp
-  trainloop: Task5SupervisedLoop
-  trainloop_kwarg: null
+  sub_log_dir: default_dcasetask5_fixmatch_randaug_exp
+  trainloop: Task5FixMatchSslLoop
+  trainloop_kwarg:
+    update_augmenter_state: false
+    hparams: 
+      fixmatch: 
+        wu: 1.0 # Pseudo label loss weight
+        confidence: 0.7 # Confidence threshold.
   optimizer: Adam
   optimizer_kwarg:
     learning_rate: 0.001
@@ -62,6 +74,10 @@ train:
         mode: max
         save_freq: epoch
         load_weights_on_restart: false
+    # - name: StepLR
+    #   kwarg:
+    #     steps: [ 10  ,  20    ,  30   ]
+    #     rates: [0.0001, 0.0004,  0.0005]
     - name: ScheduleLR    
       kwarg:
        base_lr: 0.001
@@ -69,4 +85,5 @@ train:
        warmup_epochs: 10
        decay_rate: 0.5
        decay_epochs: 10
+        
     
