--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,1 @@
-numpy==1.17.3
-scikit_image==0.16.2
-dlib==19.17.0
-tqdm==4.31.1
-scipy==1.3.0
-termcolor==1.1.0
-tensorflow_model_optimization==0.1.3
-imgaug==0.3.0
-tensorflow_gpu==2.0.0
-matplotlib==3.0.3
-opencv_python_headless==4.1.1.26
-toolz==0.9.0
-Pillow==6.2.1
-PyYAML==5.1.2
+librosa tqdm toolz opencv_python_headless imgaug more_itertools tensorflow_probability PyYAML tensorflow_addons tensorflow-gpu jupyter
