1. eager training, add ema and ckpt

--- a/config/default_dcasetask5_fixmatch_ctaug.yml
+++ b/config/default_dcasetask5_fixmatch_ctaug.yml
@@ -18,7 +18,7 @@ model:
         confidence_threshold: 0.85
         decay: 0.99
         epsilon: 0.001
-        prob_to_apply: null
+        prob_to_apply: 0.3
         num_levels: 10
   network: dcasetask5basemodel
   network_kwarg:
@@ -28,6 +28,9 @@ model:
       - 1
     nclasses: 9
     softmax: false
+    weight_decay: 0.0003
+    bn_decay: 0.9
+    bn_epsilon: 0.00001
 train:
   graph_optimizer: true
   graph_optimizer_kwarg: 
@@ -47,19 +50,37 @@ train:
   steps_per_run: 30
   log_dir: log
   sub_log_dir: default_dcasetask5_fixmatch_ctaug_exp
+  mixed_precision:
+    enable: false 
+    dtype: float32
   trainloop: Task5FixMatchSslLoop
   trainloop_kwarg:
-    update_augmenter_state: *UPDATE_AUGMENTER_STATE
     hparams: 
+      update_augmenter_state: *UPDATE_AUGMENTER_STATE
       fixmatch: 
         wu: 1.0 # Pseudo label loss weight
         confidence: 0.7 # Confidence threshold.
-  optimizer: Adam
+      ema:
+        enable: true
+        decay: 0.999
+  variablecheckpoint_kwarg: 
+    variable_dict:
+      model: train_model
+      model_ema: val_model
+      optimizer: optimizer
+    monitor: val/acc
+    mode: max
+  # optimizer: Adam
+  # optimizer_kwarg:
+  #   learning_rate: 0.001
+  #   beta_1: 0.9
+  #   beta_2: 0.999
+  #   amsgrad: false
+  optimizer: SGD
   optimizer_kwarg:
     learning_rate: 0.001
-    beta_1: 0.9
-    beta_2: 0.999
-    amsgrad: false
+    momentum: 0.9
+    nesterov: True
   callbacks:
     - name: EarlyStopping
       kwarg:
@@ -70,19 +91,6 @@ train:
         mode: max
         baseline: null
         restore_best_weights: false
-    - name: ModelCheckpoint
-      kwarg:
-        monitor: val/acc
-        verbose: 0
-        save_best_only: true
-        save_weights_only: false
-        mode: max
-        save_freq: epoch
-        load_weights_on_restart: false
-    # - name: StepLR
-    #   kwarg:
-    #     steps: [ 10  ,  20    ,  30   ]
-    #     rates: [0.0001, 0.0004,  0.0005]
     - name: AugmenterStateSync
       kwarg: 
         update_augmenter_state: *UPDATE_AUGMENTER_STATE
