--- a/config/default_facerec_triplet_k210_eager.yml
+++ b/config/default_facerec_triplet_k210_eager.yml
@@ -11,8 +11,9 @@ model:
       - *WIDTH_REF
       - *WIDTH_REF
     embedding_size: 128
+    val_dataset: lfw,cfp_fp,agedb_30
     use_softmax: false
-  network: mbv1_facerec_k210
+  network: mbv1_facerec_k210_eager
   network_kwarg:
     input_shape:
       - *WIDTH_REF
@@ -22,10 +23,6 @@ model:
     embedding_size: 128
     depth_multiplier: 0.5
     loss: triplet
-  loss: TripletLoss
-  loss_kwarg:
-    target_distance: 0.5
-    distance_fn: l2
 train:
   graph_optimizer: true
   graph_optimizer_kwarg: 
@@ -42,62 +39,41 @@ train:
   pre_ckpt: log/default_facerec_triplet_k210_exp_backup/auto_train_58.h5
   rand_seed: 10101
   epochs: 100
+  steps_per_run: 30
   log_dir: log
-  sub_log_dir: default_facerec_triplet_k210_exp
-  debug: false
-  verbose: 1
-  vali_step_factor: 0.3
+  sub_log_dir: default_facerec_triplet_k210_eager_exp
+  mixed_precision:
+    enable: false 
+    dtype: float32
+  trainloop: FaceTripletTrainingLoop
+  trainloop_kwarg: 
+    hparams:
+      loss:
+        target_distance: 1.0
+        distance_fn: 'l2'
+  variablecheckpoint_kwarg: 
+    variable_dict:
+      model: train_model
+      optimizer: optimizer
+    monitor: val/acc
+    mode: max
   optimizer: Adam
   optimizer_kwarg:
     learning_rate: 0.001
     beta_1: 0.9
     beta_2: 0.999
     amsgrad: false
-  Lookahead: true
-  Lookahead_kwarg:
-    k: 5
-    alpha: 0.5
   callbacks:
     - name: EarlyStopping
       kwarg:
-        monitor: val_acc
+        monitor: val/acc
         min_delta: 0
         patience: 4
         verbose: 0
         mode: max
         baseline: null
         restore_best_weights: false
-    - name: ModelCheckpoint
-      kwarg:
-        monitor: val_acc
-        verbose: 0
-        save_best_only: true
-        save_weights_only: false
-        mode: max
-        save_freq: epoch
-        load_weights_on_restart: false
-    - name: FacerecValidation
-      kwarg:
-        batch_size: *BATCH_SIZE_REF
-        distance_fn: l2
-        threshold: 1.5
     - name: StepLR
       kwarg:
         steps: [ 50  ,  80    ,  120   ]
-        rates: [0.0001, 0.0004,  0.0001]
-
-prune:
-  is_prune: false
-  init_sparsity: 0.5
-  final_sparsity: 0.9
-  end_epoch: 5
-  frequency: 100
-inference:
-  infer_fn: null
-evaluate:
-  eval_fn: facerec_eval
-  eval_fn_kwarg:
-    nrof_folds: 5
-    pca: 0
-    batch_size: 64
-    is_plot: true
+        rates: [0.0004, 0.0004,  0.0001]
