--- a/config/default_dcasetask5_fixmatch_randaug.yml
+++ b/config/default_dcasetask5_fixmatch_randaug.yml
@@ -36,6 +36,9 @@ train:
     constant_folding: true
     function_optimization: true
     scoped_allocator_optimization: true
+  distributionstrategy_kwarg:
+    tpu: null
+    strategy: Mirrored
   augmenter: true
   batch_size: 16
   pre_ckpt: null
