--- a/config/default_cifar10_fixmatch_ctaug.yml
+++ b/config/default_cifar10_fixmatch_ctaug.yml
@@ -1,4 +1,5 @@
 UPDATE_AUGMENTER_STATE: &UPDATE_AUGMENTER_STATE true
+MIXED_PRECISION_DTYPE: &MIXED_PRECISION_DTYPE float32
 
 mode: train
 model:
@@ -8,6 +9,7 @@ model:
     dataset: "cifar10"
     label_ratio: 0.05 # Unlabeled sample ratio.
     unlabel_dataset_ratio: 7 # Unlabeled batch size ratio.
+    mixed_precision_dtype: *MIXED_PRECISION_DTYPE
     augment_kwargs:
       name: ctaugment
       kwarg:
@@ -35,6 +37,9 @@ train:
     constant_folding: true
     function_optimization: true
     scoped_allocator_optimization: true
+  distributionstrategy_kwarg:
+    tpu: null
+    strategy: null #Mirrored
   augmenter: true
   batch_size: 64
   pre_ckpt: null
@@ -47,7 +52,7 @@ train:
   sub_log_dir: default_cifar10_fixmatch_ctaug_exp
   mixed_precision:
     enable: false
-    dtype: float32
+    dtype: *MIXED_PRECISION_DTYPE
   trainloop: Task5FixMatchSslLoop
   trainloop_kwarg:
     hparams:
