--- a/config/default_dcasetask5_fixmatch_ctaug.yml
+++ b/config/default_dcasetask5_fixmatch_ctaug.yml
@@ -1,4 +1,5 @@
 UPDATE_AUGMENTER_STATE: &UPDATE_AUGMENTER_STATE true
+MIXED_PRECISION_DTYPE: &MIXED_PRECISION_DTYPE float32
 
 mode: train
 model:
@@ -11,6 +12,7 @@ model:
       - 501
     nclasses: 9
     unlabel_dataset_ratio: 3 # Unlabeled batch size ratio.
+    mixed_precision_dtype: *MIXED_PRECISION_DTYPE
     augment_kwargs:
       name: ctaugment
       kwarg:
@@ -41,6 +43,9 @@ train:
     constant_folding: true
     function_optimization: true
     scoped_allocator_optimization: true
+  distributionstrategy_kwarg:
+    tpu: null
+    strategy: Mirrored
   augmenter: true
   batch_size: 16
   pre_ckpt: null
@@ -53,7 +58,7 @@ train:
   sub_log_dir: default_dcasetask5_fixmatch_ctaug_exp
   mixed_precision:
     enable: false
-    dtype: float32
+    dtype: *MIXED_PRECISION_DTYPE
   trainloop: Task5FixMatchSslLoop
   trainloop_kwarg:
     hparams:
