gan : 1. add mnist dcgan

--- a/config/default_dcasetask5_fixmatch_randaug.yml
+++ b/config/default_dcasetask5_fixmatch_randaug.yml
@@ -92,5 +92,6 @@ train:
        warmup_epochs: 10
        decay_rate: 0.5
        decay_epochs: 10
+       outside_optimizer: optimizer
         
     
