ssl : 1. add infomax

--- a/config/default_cifar10_fixmatchmixup_ctaug.yml
+++ b/config/default_cifar10_fixmatchmixup_ctaug.yml
@@ -40,7 +40,7 @@ train:
     scoped_allocator_optimization: true
   distributionstrategy_kwarg:
     tpu: null
-    strategy: null #Mirrored
+    strategy: Mirrored
   augmenter: true
   batch_size: 64
   pre_ckpt: null
