--- a/config/default_facerec_amsoftmax_k210_eager.yml
+++ b/config/default_facerec_amsoftmax_k210_eager.yml
@@ -50,7 +50,7 @@ train:
   trainloop_kwarg:
     hparams:
       loss:
-        name: Sparse_AmsoftmaxLoss
+        name: SparseAmsoftmaxLoss
         kwarg:
           batch_size: *BATCH_SIZE_REF
           scale: 30
